[package]
name = "solarti-anchor-cli"
version = "0.26.1"
authors = [
  "Miraplexer <miraplexer@outlook.com>",
  "armaniferrante <armaniferrante@gmail.com>"
]
repository = "https://github.com/miraland-labs/anchor"
rust-version = "1.59"
edition = "2021"
description = "Anchor CLI"
license = "Apache-2.0"

[[bin]]
name = "anchor"
path = "src/bin/main.rs"

[features]
dev = []
default = []

[dependencies]
borsh = { version = "1.2.1", features = ["derive", "unstable__schema"] }
clap = { version = "4.0.26", features = ["derive"] }
anyhow = "1.0.32"
syn = { version = "1.0.60", features = ["full", "extra-traits"] }
solarti-anchor-lang = { path = "../lang", version = "0.26.1" }
solarti-anchor-client = { path = "../client", version = "0.26.1" }
anchor-syn = { path = "../lang/syn", features = ["idl", "init-if-needed"], version = "0.26.1" }
serde_json = "1.0"
shellexpand = "2.1.0"
toml = "0.5.8"
semver = "1.0.4"
serde = { version = "1.0.122", features = ["derive"] }
miraland-sdk = "1.18.2"
miraland-program = "1.18.2"
miraland-client = "1.18.2"
miraland-cli-config = "1.18.2"
miraland-faucet = "1.18.2"
dirs = "4.0"
heck = "0.4.0"
flate2 = "1.0.19"
tar = "0.4.35"
reqwest = { version = "0.11.4", features = ["multipart", "blocking"] }
tokio = "1.0"
pathdiff = "0.2.0"
cargo_toml = "0.13.0"
walkdir = "2.3.2"
chrono = "0.4.19"
portpicker = "0.1.1"

[lib]
crate-type = ["lib"]
name = "anchor_cli"