[package]
name = "anchor-attribute-constant"
version = "0.26.1"
authors = [
  "Miraplexer <miraplexer@outlook.com>",
  "Serum Foundation <foundation@projectserum.com>"
]
repository = "https://github.com/miraland-labs/anchor"
license = "Apache-2.0"
description = "Anchor attribute macro for creating constant types"
rust-version = "1.59"
edition = "2021"

[lib]
proc-macro = true

[features]
anchor-debug = ["anchor-syn/anchor-debug"]

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0.60", features = ["full"] }
anchor-syn = { path = "../../syn", version = "0.26.0" }
